[gd_scene load_steps=12 format=2]

[ext_resource path="res://Example/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Example/Scripts/HPBar.gd" type="Script" id=2]
[ext_resource path="res://Example/Scripts/FlashManager.gd" type="Script" id=3]
[ext_resource path="res://Example/Assets/SFX/2_Shoot.wav" type="AudioStream" id=4]
[ext_resource path="res://Example/Assets/SFX/1_Hit.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "EnemyMovement"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Enemy:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4, 5.5, 8, 9 ),
"transitions": PoolRealArray( -2, 1, -2, 1, -2, 0 ),
"update": 0,
"values": [ Vector2( 496, 136 ), Vector2( 888, 136 ), Vector2( 888, 136 ), Vector2( 80, 136 ), Vector2( 80, 136 ), Vector2( 496, 136 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0588235, 0.0588235, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.32072, 0.76, 0.2432, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0588235, 0.0588235, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0588235, 0.0588235, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0588235, 0.0588235, 0.145098, 0.698039 )

[node name="Node" type="Node2D"]

[node name="Enemy" type="Node2D" parent="."]
position = Vector2( 496, 136 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Shoot" type="AudioStreamPlayer" parent="Enemy"]
stream = ExtResource( 4 )
bus = "PitchShifter"

[node name="ColorRect" type="ColorRect" parent="Enemy"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
color = Color( 0.878431, 0.152941, 0.376471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Enemy"]
one_shot = true

[node name="BulletCircle" type="Timer" parent="Enemy"]

[node name="BulletBurst" type="Timer" parent="Enemy"]
wait_time = 0.1
one_shot = true

[node name="Bullets" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 632, 352 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 350

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Player"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
color = Color( 0.337255, 0.780392, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hit" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 5 )
bus = "PitchShifter"

[node name="OOB" type="Area2D" parent="."]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="OOB"]
polygon = PoolVector2Array( 1024, 0, 1024, 600, 0, 600, 0, 0, -64, 0, -56, 640, 1080, 640, 1088, -56, 0, -64, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EnemyMovement = SubResource( 2 )

[node name="Walls" type="StaticBody2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
build_mode = 1
polygon = PoolVector2Array( 0, 0, 1024, 0, 1024, 600, -64, 600, -64, 640, 1088, 648, 1088, -64, -72, -64, -64, 600, 0, 600 )

[node name="GUI" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = 2.11893
margin_right = 1024.0
margin_bottom = 602.119
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GUI"]
margin_right = 300.0
margin_bottom = 45.0
custom_constants/margin_top = 15
custom_constants/margin_left = 15
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 300.0
margin_bottom = 45.0
custom_constants/separation = 0

[node name="Panel" type="Panel" parent="GUI/MarginContainer/HBoxContainer"]
margin_right = 45.0
margin_bottom = 30.0
rect_min_size = Vector2( 45, 0 )
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="GUI/MarginContainer/HBoxContainer/Panel"]
margin_left = 13.0
margin_top = 8.0
margin_right = 31.0
margin_bottom = 22.0
text = "HP"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" type="ProgressBar" parent="GUI/MarginContainer/HBoxContainer"]
margin_left = 45.0
margin_right = 285.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
max_value = 1.0
value = 1.0
script = ExtResource( 2 )

[node name="REEDME" type="MarginContainer" parent="GUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 385.0
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUI/REEDME"]
margin_left = 15.0
margin_right = 385.0
margin_bottom = 185.0
custom_styles/panel = SubResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="GUI/REEDME"]
margin_left = 15.0
margin_right = 385.0
margin_bottom = 185.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="RichTextLabel" type="RichTextLabel" parent="GUI/REEDME/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 360.0
margin_bottom = 175.0
bbcode_enabled = true
bbcode_text = "CONTROLS
- [Arrow Keys] to move, and [Enter] to heal

THINGS TO NOTICE
- Shots are in sync, and in pitch with the music
- At 30% HP:
	- the violins fade out & Cellos fade in
	- the attack pattern changes
- There is also a random chance of little motifs playing 
  so watch out for that"
text = "CONTROLS
- [Arrow Keys] to move, and [Enter] to heal

THINGS TO NOTICE
- Shots are in sync, and in pitch with the music
- At 30% HP:
	- the violins fade out & Cellos fade in
	- the attack pattern changes
- There is also a random chance of little motifs playing 
  so watch out for that"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Enemy/Timer" to="Enemy" method="_on_Timer_timeout"]
[connection signal="area_entered" from="OOB" to="Enemy" method="_on_OOB_area_entered"]
